<resources>
    <string name="app_name">Furniture</string>
    <string name="intro">The best simple place where you discover most wonderful furnitures and make your home beautiful</string>
    <string name="intro_title">make your home beautiful</string>
    <string name="sign_in">Sign in</string>
    <string name="sign_up">Sign up</string>
    <string name="enter_user">Enter username</string>
    <string name="enter_pass">Enter password</string>
    <string name="remember_me">Remember me</string>
    <string name="forgot_pass">Forgot password ?</string>
    <string name="create_account">Create Account</string>
    <string name="confirm_pass">Confirm password</string>
    <string name="next">Next</string>
    <string name="phone_numer">Phone number</string>
    <string name="enter_phone">Enter phone number</string>
    <string name="send">Send</string>
    <string name="code">code</string>
    <string name="enter_onetime_pass">Enter one time password send</string>
    <string name="verify">Verify OTP</string>
    <string name="log_in">Log in</string>
    <string name="dont_have_ac">Don\'t have an account?</string>
    <string name="enter_email">Enter email address</string>
    <string name="already_have_ac">Already have an account?</string>
    <string name="welcome_back">Welcome back</string>
    <string name="welcome">Welcome</string>
    <string name="back_to_login">Back to Login</string>
    <string name="back_to_register">Back to register</string>
    <string name="don_receive_code">Didn\'t receive the code?</string>
    <string name="resend">Resend</string>
    <string name="new_password">New password</string>
    <string name="save">Save</string>
    <string name="choose_number">Or\nChoose another number</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="edit_profile_desc">Username, Email, . . . </string>
    <string name="order_history">Order History</string>
    <string name="order_history_desc">Your recently orders</string>
    <string name="sample_user_name">Bruno</string>
    <string name="sample_email">bruno@email.com</string>
    <string name="shipping_add">Shipping Address</string>
    <string name="shipping_add_desc">03 Addresses</string>
    <string name="setting">Setting</string>
    <string name="setting_desc">Notification, Password, FAQ, Contact</string>
    <string name="log_out">Log out</string>
    <string name="make_home">Make home</string>
    <string name="beautiful">beautiful</string>
    <string name="search">Search</string>
    <string name="add_to_cart">Add to cart</string>
    <string name="use_this_shipping">Use as the shipping address</string>
    <string name="enter_street_address">Street Address</string>
    <string name="favourite">favourite</string>
    <string name="notification">Notification</string>
    <string name="my_cart">my cart</string>
    <string name="money_symbol">$ </string>
    <string name="city">City</string>
    <string name="province_city">Province/City</string>
    <string name="district">District</string>
    <string name="ward_commune">Ward/Commune</string>
    <string name="street_address">Street Address</string>
    <string name="save_address">Save Address</string>
    <string name="add_shipping_add">Add Shipping Address</string>
    <string name="use_as_df_addrss">Use as the shipping address</string>
    <string name="total_price">Total:</string>
    <string name="check_out">Check out</string>
    <string name="order">Order:</string>
    <string name="personal_information">Personal Information</string>
    <string name="name">Name</string>
    <string name="summit">submit order</string>
    <string name="my_order">My Orders</string>
    <string name="msg_token_fmt">jfkjf</string>
    <string name="detail">Detail</string>
    <string name="quantity">Quantity </string>
    <string name="detail_order">Order detail</string>
    <string name="phone">PhoneNo</string>
    <string name="order_no">OrderNo</string>
    <string name="date">Date</string>
    <string name="fint_product">Find product</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
</resources>