<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_color"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".views.SignInActivity">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/space16"
        android:layout_marginRight="@dimen/space16"
        android:text="@string/welcome_back"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="@dimen/font42" />


    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="@dimen/space32"
        android:layout_marginTop="@dimen/space32"
        android:layout_marginRight="@dimen/space32"
        android:backgroundTint="@color/white"
        app:cardCornerRadius="@dimen/space16">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/editMailLogin"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/space16"
                android:layout_marginTop="@dimen/space32"
                android:layout_marginRight="@dimen/space16"
                android:layout_marginBottom="@dimen/space16"
                android:background="@color/white"
                android:hint="@string/enter_email"
                app:boxStrokeColor="@color/black"
                app:boxStrokeWidthFocused="@dimen/space2"
                app:endIconMode="clear_text"
                app:endIconTint="@color/black"
                app:hintTextColor="@color/black"
                app:startIconDrawable="@drawable/ic_email"
                app:startIconTint="@color/black_1">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:imeOptions="actionNext"
                    android:inputType="textEmailAddress" />

            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/editPassLogin"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/space16"
                android:background="@color/white"
                android:hint="@string/enter_pass"
                app:boxStrokeColor="@color/black"
                app:boxStrokeWidthFocused="@dimen/space2"
                app:endIconMode="password_toggle"
                app:endIconTint="@color/black"
                app:hintTextColor="@color/black"

                app:startIconDrawable="@drawable/ic_lock"
                app:startIconTint="@color/black_1">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:imeOptions="actionDone"
                    android:inputType="textPassword" />

            </com.google.android.material.textfield.TextInputLayout>


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/space16"
                android:layout_marginRight="@dimen/space16">

                <androidx.appcompat.widget.AppCompatCheckBox
                    android:id="@+id/chkRememberMe"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:buttonTint="@color/black_1"
                    android:fontFamily="@font/nunitosans_semibold"
                    android:text="@string/remember_me"
                    android:textSize="@dimen/font14" />

                <TextView
                    android:id="@+id/tvForgotPass"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:fontFamily="@font/nunitosans_semibold"
                    android:text="@string/forgot_pass"
                    android:textColor="@color/black"
                    android:textSize="@dimen/font14" />

            </RelativeLayout>


            <Button
                android:id="@+id/btnLogin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/space16"
                android:layout_marginBottom="@dimen/space16"
                android:backgroundTint="@color/main_color"
                android:text="@string/log_in" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="@dimen/space16"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/space8"
                    android:layout_weight="1"
                    android:text="@string/dont_have_ac"
                    android:textAlignment="textEnd"
                    android:textAllCaps="false"
                    android:textColor="@color/grey_2"
                    android:textSize="@dimen/font14" />

                <TextView
                    android:id="@+id/tvSignUp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/space8"
                    android:layout_weight="1"
                    android:fontFamily="@font/nunitosans_semibold"
                    android:paddingLeft="@dimen/space8"
                    android:text="@string/sign_up"
                    android:textAlignment="textStart"
                    android:textAllCaps="true"
                    android:textColor="@color/black_1"
                    android:textSize="@dimen/font14" />
            </LinearLayout>

        </LinearLayout>


    </androidx.cardview.widget.CardView>

</LinearLayout>