<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_color"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".views.SignUpActivity">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/space16"
        android:layout_marginRight="@dimen/space16"
        android:text="@string/welcome"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="@dimen/font42" />


    <androidx.cardview.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="@dimen/space32"
        android:layout_marginTop="@dimen/space8"
        android:backgroundTint="@color/white"
        android:layout_marginRight="@dimen/space32"
        android:background="@color/white"
        app:cardCornerRadius="@dimen/space16">

        <LinearLayout
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/space16"
                android:hint="@string/enter_user"
                app:boxStrokeColor="@color/black"
                app:boxStrokeWidthFocused="@dimen/space2"
                app:endIconMode="clear_text"
                app:endIconTint="@color/black"
                android:id="@+id/editUserAccount"
                android:background="@color/white"
                app:hintTextColor="@color/black"
                app:startIconDrawable="@drawable/ic_bi_person_fill"
                app:startIconTint="@color/black_1">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:imeOptions="actionNext"/>

            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/space16"
                android:hint="@string/enter_email"
                app:boxStrokeColor="@color/black"
                app:boxStrokeWidthFocused="@dimen/space2"
                app:endIconMode="clear_text"
                app:endIconTint="@color/black"
                android:id="@+id/editEmailAccount"
                android:background="@color/white"
                app:hintTextColor="@color/black"
                app:startIconDrawable="@drawable/ic_email"
                app:startIconTint="@color/black_1">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress"
                    android:imeOptions="actionNext"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/space16"
                android:hint="@string/enter_pass"
                app:boxStrokeColor="@color/black"
                app:boxStrokeWidthFocused="@dimen/space2"
                app:endIconMode="password_toggle"
                app:endIconTint="@color/black"
                app:hintTextColor="@color/black"
                android:background="@color/white"
                android:id="@+id/editPassAccount"
                app:startIconDrawable="@drawable/ic_lock"
                app:startIconTint="@color/black_1">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    />

            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/space16"
                android:hint="@string/confirm_pass"
                app:boxStrokeColor="@color/black"
                app:boxStrokeWidthFocused="@dimen/space2"
                app:endIconMode="password_toggle"
                app:endIconTint="@color/black"
                android:background="@color/white"
                app:hintTextColor="@color/black"
                android:id="@+id/editConfirmAccount"
                app:startIconDrawable="@drawable/ic_lock"
                app:startIconTint="@color/black_1">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:imeOptions="actionDone"/>

            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="@dimen/space16"
                android:id="@+id/btnNextAccount"
                android:backgroundTint="@color/main_color"
                android:text="@string/next" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="@dimen/space16"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/space8"
                    android:layout_weight="1"
                    android:text="@string/already_have_ac"
                    android:textAlignment="textEnd"
                    android:textAllCaps="false"
                    android:textColor="@color/grey_2"
                    android:textSize="@dimen/font14" />

                <TextView
                    android:id="@+id/tvSignIn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/space8"
                    android:layout_weight="1"
                    android:fontFamily="@font/nunitosans_semibold"
                    android:paddingLeft="@dimen/space8"
                    android:text="@string/sign_in"
                    android:textAlignment="textStart"
                    android:textAllCaps="true"
                    android:textColor="@color/black_1"
                    android:textSize="@dimen/font14" />
            </LinearLayout>

        </LinearLayout>


    </androidx.cardview.widget.CardView>

</LinearLayout>