<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".views.EditProfileActivity">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/main_color">

        <ImageView
            android:id="@+id/ivBackToAccount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/space16"
            android:src="@drawable/ic_chevron_left" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/edit_profile"
            android:textSize="@dimen/font24" />


    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/editNameProfile"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/space16"
            android:layout_marginRight="@dimen/space16"
            android:background="@color/white"
            android:hint="@string/enter_user"
            app:boxStrokeColor="@color/black"
            app:boxStrokeWidthFocused="@dimen/space2"
            app:endIconMode="clear_text"
            app:endIconTint="@color/black"
            app:hintTextColor="@color/black"
            app:startIconDrawable="@drawable/ic_bi_person_fill"
            app:startIconTint="@color/black_1">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:imeOptions="actionNext"
                android:inputType="text" />

        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/editEmailProfile"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/space16"
            android:layout_marginTop="@dimen/space16"
            android:layout_marginRight="@dimen/space16"
            android:background="@color/white"
            android:hint="@string/enter_email"
            app:boxStrokeColor="@color/black"
            app:boxStrokeWidthFocused="@dimen/space2"
            app:endIconMode="clear_text"
            app:endIconTint="@color/black"
            app:hintTextColor="@color/black"
            app:startIconDrawable="@drawable/ic_email"
            app:startIconTint="@color/black_1">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:imeOptions="actionNext"
                android:inputType="textEmailAddress" />

        </com.google.android.material.textfield.TextInputLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/space16"
            android:layout_marginTop="@dimen/space16"
            android:layout_marginRight="@dimen/space16"
            android:gravity="center_vertical"
            android:orientation="horizontal">


            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:hint="@string/enter_phone"
                app:boxStrokeColor="@color/black"
                app:boxStrokeWidthFocused="@dimen/space2"
                app:endIconMode="clear_text"
                app:endIconTint="@color/black"
                android:id="@+id/editPhoneProfile"
                app:hintTextColor="@color/black"
                app:startIconDrawable="@drawable/ic_phone"
                app:startIconTint="@color/black_1">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:imeOptions="actionNext"
                    android:inputType="phone" />

            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/space16"
            android:text="@string/save"
            android:id="@+id/btnSaveProfile"
            android:backgroundTint="@color/main_color"/>

    </LinearLayout>


</LinearLayout>